Updated to latest spec. Implemented origins sheet for spreadsheet tools
Signed-off-by: goneall <gary@sourceauditor.com>

--- a/resources/screen.css
+++ b/resources/screen.css
@@ -14,11 +14,11 @@ padding: 1ex;
 }
 
 .replacable-license-text {
-color: #0000cc;
+color: #CC0000;
 }
 
 .optional-license-text {
-color: #009900;
+color: #0000cc;
 }
 
 h2 {
